--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ h1{
 
 <h1>Hello World!!!</h1> 
 <h1>Hello World!!!</h1>
- <h1>Hello World!!!</h1>
- <p>hello!</p> 
-
+<h1>Hello World!!!</h1>
+<p>hello!</p> 
+<p>Because some men aren't looking for anything logical, like money. They can't be bought, bullied, reasoned or negotiated with. 
+    Some men just wanna watch the world burn.
+</p>
 </html> 
