--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@ h1{
 <p>Because some men aren't looking for anything logical, like money. They can't be bought, bullied, reasoned or negotiated with. 
     Some men just wanna watch the world burn.
 </p>
+
+<p>Never start with the head. The victim gets all fuzzy. He can't feel the next... See?</p>
 </html> 
